Fix awards progress bar, Fix project links position, Add project links to mobile view, Improve mobile header, Hide project links based on award visibility

--- a/app/assets/stylesheets/header_footer_backport.css
+++ b/app/assets/stylesheets/header_footer_backport.css
@@ -263,14 +263,14 @@ a.header--nav--links--current {
     box-sizing: border-box;
     width: 100%;
     height: 60px;
-    padding: 0 33px;
+    padding: 0 15px;
     box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.12);
     background-color: #ffffff;
   }
 
   .header-mobile__menu-icon {
     position: absolute;
-    right: 33px;
+    right: 15px;
     height: 50px;
     width: 24px;
     cursor: pointer;
@@ -341,8 +341,8 @@ a.header--nav--links--current {
     width: 100%;
     bottom: 0;
     background: white;
-    padding-top: 60px;
     box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.12);
+    font-family: Montserrat, sans-serif;
   }
 
   .header--nav--links {
@@ -358,9 +358,9 @@ a.header--nav--links--current {
     box-sizing: border-box;
     width: 100%;
     height: 60px;
-    padding: 0 32px;
-    font-size: 24px;
-    font-weight: normal;
+    padding: 0 15px;
+    font-size: 18px;
+    font-weight: 400;
     font-style: normal;
     font-stretch: normal;
     line-height: normal;
@@ -371,8 +371,7 @@ a.header--nav--links--current {
 
   a.header--nav--links--current {
     color: var(--primary-blue);
-    font-weight: bold;
-    padding-left: 28px;
+    padding-left: 11px;
     border-left: solid 4px;
   }
 
@@ -396,9 +395,9 @@ a.header--nav--links--current {
     box-sizing: border-box;
     width: 50%;
     height: 60px;
-    padding: 0 32px;
+    padding: 0 15px;
     font-size: 18px;
-    font-weight: normal;
+    font-weight: 400;
     font-style: normal;
     font-stretch: normal;
     line-height: normal;
