--- a/app/javascript/src/application.css
+++ b/app/javascript/src/application.css
@@ -111,14 +111,14 @@ a.header--nav--links--current {
     box-sizing: border-box;
     width: 100%;
     height: 60px;
-    padding: 0 33px;
+    padding: 0 15px;
     box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.12);
     background-color: #ffffff;
   }
 
   .header-mobile__menu-icon {
     position: absolute;
-    right: 33px;
+    right: 15px;
     height: 50px;
     width: 24px;
     cursor: pointer;
@@ -189,7 +189,6 @@ a.header--nav--links--current {
     width: 100%;
     bottom: 0;
     background: white;
-    padding-top: 60px;
     box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.12);
   }
 
@@ -206,9 +205,9 @@ a.header--nav--links--current {
     box-sizing: border-box;
     width: 100%;
     height: 60px;
-    padding: 0 32px;
-    font-size: 24px;
-    font-weight: normal;
+    padding: 0 15px;
+    font-size: 18px;
+    font-weight: 400;
     font-style: normal;
     font-stretch: normal;
     line-height: normal;
@@ -219,8 +218,7 @@ a.header--nav--links--current {
 
   a.header--nav--links--current {
     color: var(--primary-blue);
-    font-weight: bold;
-    padding-left: 28px;
+    padding-left: 11px;
     border-left: solid 4px;
   }
 
@@ -244,9 +242,9 @@ a.header--nav--links--current {
     box-sizing: border-box;
     width: 50%;
     height: 60px;
-    padding: 0 32px;
+    padding: 0 15px;
     font-size: 18px;
-    font-weight: normal;
+    font-weight: 400;
     font-style: normal;
     font-stretch: normal;
     line-height: normal;
@@ -2275,15 +2273,20 @@ select:disabled {
 .project-header__menu {
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-start;
   text-transform: uppercase;
   font-size: 12px;
+  line-height: 1.5;
   font-weight: bold;
   font-style: normal;
   font-stretch: normal;
-  line-height: normal;
   letter-spacing: normal;
   text-align: right;
+}
+
+.project-header__menu__links {
+  margin-left: auto;
+  line-height: 1.5;
 }
 
 @media screen and (max-width: 1024px) {
@@ -2294,9 +2297,15 @@ select:disabled {
 
 .project-header__menu__back {
   display: inline-flex;
+  flex-grow: 1;
   align-items: center;
   color: white;
   text-decoration: none;
+  line-height: 1.5;
+}
+
+.project-header__menu__back img {
+  height: 12px;
 }
 
 .project-header__menu__link {
@@ -2358,11 +2367,7 @@ select:disabled {
 
   .project-header__content {
     box-sizing: border-box;
-    padding: 60px 32px 95px;
-  }
-
-  .project-header__menu {
-    display: none;
+    padding: 15px 15px 35px 15px;
   }
 
   .project-header__name {
@@ -2371,6 +2376,17 @@ select:disabled {
 
   .project-header__owner {
     font-size: 18px;
+  }
+
+  .project-header__menu__links {
+    display: flex;
+    flex-direction: column-reverse;
+  }
+
+  .project-header__menu__link {
+    display: block;
+    padding: 0;
+    border-left: none;
   }
 }
 
